# burrow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  compose.yaml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
charts/burrow/: Chart.yaml  README.md  values.yaml
charts/burrow/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  ingress.yaml  secret.yaml  service-headless.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
contrib/: burrow.service  com.burrow.daemon.plist  config.example.toml
crates/burrow/: Cargo.toml
crates/burrow-core/: Cargo.toml
crates/burrow-core/src/: chunk.rs  crypto.rs  error.rs  lib.rs  manifest.rs  planner.rs  snapshot.rs  store.rs
crates/burrow-daemon/: Cargo.toml  build.rs
crates/burrow-daemon/src/: auth.rs  blobstore.rs  config.rs  ctrl.rs  daemon.rs  db.rs  keys.rs  lib.rs  net.rs  ops.rs  paths.rs  peers.rs  replicate.rs  scheduler.rs  sys.rs  token.rs  verify.rs  web.rs
crates/burrow-proto/: Cargo.toml
crates/burrow-proto/src/: ctrl.rs  lib.rs  peer.rs
crates/burrow/src/: client.rs  main.rs
packaging/: burrowctl
packaging/debian/: postinst  postrm  prerm
packaging/homebrew/: burrow.rb.tmpl
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/: Modal.svelte  Sidebar.svelte  StatusPill.svelte  UsageBar.svelte
web/src/lib/: api.svelte.ts  format.ts  state.svelte.ts
web/src/views/: BackupDetail.svelte  Backups.svelte  Devices.svelte  Friends.svelte  Overview.svelte  Storage.svelte
