[workspace]
resolver = "2"
members = [
    "crates/burrow-core",
    "crates/burrow-proto",
    "crates/burrow-daemon",
    "crates/burrow",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solidsilver/burrow"

[workspace.dependencies]
burrow-core = { path = "crates/burrow-core" }
burrow-proto = { path = "crates/burrow-proto" }
# default-features = false: the `web` feature must come from the depending
# crate (burrow's `default = ["web"]`); without this, the dependency edge
# always activates burrow-daemon's own default features and a
# `--no-default-features` build silently keeps the web UI.
burrow-daemon = { path = "crates/burrow-daemon", default-features = false }

serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
thiserror = "2"
blake3 = "1"
tracing = "0.1"

[profile.release]
lto = "thin"
strip = true
