[package]
name = "burrow-core"
description = "Chunking, encryption, and snapshot model for burrow — pure logic, no networking"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
blake3.workspace = true
fastcdc = "4"
chacha20poly1305 = "0.11"
zeroize = { version = "1", features = ["derive"] }
bip39 = "2"
getrandom = "0.4"
walkdir = "2"
globset = "0.4"
filetime = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
