[package]
name = "burrow-daemon"
description = "The burrow daemon: iroh router, storage contracts, replication, repair"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
burrow-core.workspace = true
burrow-proto.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow = "1"
tokio = { version = "1", features = ["full"] }
iroh = "1"
iroh-tickets = "1"
iroh-blobs = { version = "0.103", features = ["fs-store"] }
postcard.workspace = true
getrandom = "0.3"
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2"
toml = "0.9"
gethostname = "1"
cron = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
blake3.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
