[package]
name = "burrow-daemon"
description = "The burrow daemon: iroh router, storage contracts, replication, repair"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
burrow-core.workspace = true
burrow-proto.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow = "1"
tokio = { version = "1", features = ["full"] }
iroh = "1"
iroh-tickets = "1"
iroh-blobs = { version = "0.103", features = ["fs-store"] }
# Direct dep for TokioStreamWriter (drain-validating local blobs without
# buffering them); same version iroh-blobs already pulls in.
iroh-io = "0.6"
postcard.workspace = true
getrandom = "0.3"
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2"
toml = "0.9"
gethostname = "1"
cron = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
blake3.workspace = true
libc = "0.2"

# Optional web UI / JSON API (feature "web", on by default — disable with
# `--no-default-features` for a lean build).
axum = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
rust-embed = { version = "8", optional = true }

[features]
default = ["web"]
web = ["dep:axum", "dep:serde_json", "dep:rust-embed"]

[dev-dependencies]
tempfile = "3"
