[package]
name = "burrow-proto"
description = "Wire types and protocol definitions shared by burrow's daemon, CLI, and peers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
burrow-core.workspace = true
serde.workspace = true
postcard.workspace = true
