[package]
name = "burrow"
description = "Distributed backup among friends — reserve space on each other's machines, over iroh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
burrow-core.workspace = true
burrow-proto.workspace = true
burrow-daemon.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
